redis config change

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -687,7 +687,8 @@ redis:
   cluster:
     enabled: false
     slaveCount: 0
-  usePassword: false
+  auth:
+    enabled: false
   master:
     persistence:
       enabled: false
