disabled post hearings a for tribunals and tya

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -28,8 +28,7 @@ java:
     CREATE_CCD_ENDPOINT: true
     CASE_ACCESS_MANAGEMENT_FEATURE: true
     WORK_ALLOCATION_FEATURE: true
-    SCHEDULE_LISTING_FEATURE: true
-    POST_HEARINGS_FEATURE: true
+    POST_HEARINGS_FEATURE: false
     POST_HEARINGS_B_FEATURE: true
     SCHEDULE_LISTING_FEATURE: true
     ADJOURNMENT_FEATURE: true
@@ -587,7 +586,7 @@ sscs-tya-notif:
       HOURS_END_TIME: 23
       RUN_DB_MIGRATION_ON_STARTUP: true
       TEST_RECIPIENTS_POSTCODE: "*"
-      POST_HEARINGS_FEATURE: true
+      POST_HEARINGS_FEATURE: false
       POST_HEARINGS_B_FEATURE: true
     secrets:
       AMQP_PASSWORD:
