--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -30,7 +30,7 @@ java:
     CASE_ACCESS_MANAGEMENT_FEATURE: true
     WORK_ALLOCATION_FEATURE: true
     SCHEDULE_LISTING_FEATURE: true
-    POST_HEARINGS_FEATURE: true
+    POST_HEARINGS_FEATURE: false
     POST_HEARINGS_B_FEATURE: true
 
 idam-pr:
