SSCS-11873 Populate daysToHearing in event actionPostponementRequest

--- a/.env
+++ b/.env
@@ -60,11 +60,20 @@ export DOCUMENT_STORE_URL=http://localhost:5005
 export WA_SYSTEM_USERNAME=wa-system-user@fake.hmcts.net
 export WA_SYSTEM_PASSWORD=System01
 
+export SYSTEMUPDATE_USERNAME=system.update@hmcts.net
+export SYSTEMUPDATE_PASSWORD=password
+
 export SUPERUSER_USERNAME=super-user@example.com
 export SUPERUSER_PASSWORD=password
 
 export CASEWORKER_USERNAME=local.test@example.com
 export CASEWORKER_PASSWORD=password
+
+export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
+export CTSC_ADMINISTRATOR_PASSWORD=password
+
+export REGIONAL_CENTRE_ADMIN_USERNAME=regional-centre-admin@fake.hmcts.net
+export REGIONAL_CENTRE_ADMIN_PASSWORD=password
 
 export WA_CASEOFFICER_USERNAME=wa-caseofficer-user@fake.hmcts.net
 export WA_CASEOFFICER_PASSWORD=System01
