--- a/build.gradle
+++ b/build.gradle
@@ -335,8 +335,8 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: 'b8a7439'
-    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '7aa3dc0'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.26.4'
+    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.10'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.41.0'
     implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.14.1'
