--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,11 @@ gitProperties {
 group = 'uk.gov.hmcts.reform'
 version = '1.0.0'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 compileJava {
     options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked"
@@ -289,6 +292,7 @@ dependencyManagement {
 }
 
 dependencies {
+    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
@@ -296,6 +300,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-activemq'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
     implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.8.5'
     implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.8.5'
@@ -304,6 +309,8 @@ dependencies {
 
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.4'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
 
     implementation group: 'com.google.guava', name: 'guava', version: '32.1.1-jre'
     implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.10'
@@ -328,8 +335,8 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.26.2'
-    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.4'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.26.4'
+    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.10'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.41.0'
     implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.14.1'
@@ -410,6 +417,7 @@ dependencies {
     testImplementation platform(group: 'org.junit', name: 'junit-bom', version: '5.9.3')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
     testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine'
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
 
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
     // https://mvnrepository.com/artifact/org.awaitility/awaitility
