Updated SYA image version

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -638,7 +638,7 @@ sscs-ccd-callback-orchestrator:
 sscs-tribunals-frontend:
   enabled: true
   nodejs:
-    image: hmctspublic.azurecr.io/sscs/tribunals-frontend:prod-32cbe82-20220825134712
+    image: hmctspublic.azurecr.io/sscs/tribunals-frontend:latest
     releaseNameOverride: ${SERVICE_NAME}-sscs-tribunals-frontend
     ingressHost: sya-${SERVICE_FQDN}
     environment:
