--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -608,7 +608,7 @@ sscs-tya-notif:
 sscs-ccd-callback-orchestrator:
   enabled: true
   java:
-    image: hmctspublic.azurecr.io/sscs/ccd-callback-orchestrator:pr-1074
+    image: hmctspublic.azurecr.io/sscs/ccd-callback-orchestrator:latest
     releaseNameOverride: ${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     readinessDelay: 90
     environment:
