--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -616,6 +616,26 @@ sscs-ccd-callback-orchestrator:
       SUBSCRIPTION_NAME: "sscs-evidenceshare-subscription-aat"
       TOPIC_NAME: "sscs-evidenceshare-topic-aat"
       AMQP_HOST: "sscs-servicebus-aat.servicebus.windows.net"
+      AMQP_USERNAME: "RootManageSharedAccessKey"
+    keyVaults:
+      sscs:
+        secrets:
+          - name: idam-api
+            alias: IDAM_URL
+          - name: idam-sscs-systemupdate-user
+            alias: IDAM_SSCS_SYSTEMUPDATE_USER
+          - name: idam-sscs-systemupdate-password
+            alias: IDAM_SSCS_SYSTEMUPDATE_PASSWORD
+          - name: idam-sscs-oauth2-client-secret
+            alias: IDAM_OAUTH2_CLIENT_SECRET
+          - name: sscs-s2s-secret
+            alias: IDAM_S2S_AUTH_TOTP_SECRET
+          - name: s2s-micro
+            alias: IDAM_S2S_AUTH_MICROSERVICE
+          - name: app-insights-connection-string
+            alias: app_insights_connection_string
+          - name: evidence-share-topic-shared-access-key
+            alias: AMQP_PASSWORD
 
 #Enable for SYA
 sscs-tribunals-frontend:
