--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -750,7 +750,7 @@ hmc-cft-hearing-service:
 servicebus:
   enabled: true
   resourceGroup: sscs-aso-preview-rg
-  sbNamespace: sscs
+  sbNamespace: sscs-servicebus-preview
   #Each topic/queue matches up to one used in the config above
   setup:
     topics:
