--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.sonarqube' version '4.3.0.3225'
     id 'jacoco'
     id 'org.springframework.boot' version '2.7.14'
+    id 'io.spring.dependency-management' version '1.1.3'
     id 'uk.gov.hmcts.java' version '0.12.43'
     id 'com.gorylenko.gradle-git-properties' version '2.4.1'
     id 'com.github.ben-manes.versions' version '0.46.0'
@@ -13,18 +14,12 @@ plugins {
     id 'com.github.hmcts.rse-cft-lib' version '0.19.771'
 }
 
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: "info.solidsoft.pitest"
-
 gitProperties {
-    gitPropertiesDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/sscs")
+    gitPropertiesDir = layout.buildDirectory.dir("src/main/resources/uk/gov/hmcts/reform/sscs")
     keys = ['git.commit.id', 'git.commit.time']
     dateFormat = "yyyy-MM-dd'T'HH:mmZ"
     dateFormatTimeZone = "GMT"
 }
-
-
 
 group = 'uk.gov.hmcts.reform'
 version = '1.0.0'
@@ -184,7 +179,6 @@ dependencyCheck {
 }
 
 repositories {
-
     mavenLocal()
     mavenCentral()
 
@@ -243,15 +237,16 @@ configurations {
     contractTestRuntimeOnly.extendsFrom(testRuntimeOnly)
 }
 
-task installLocalGitHook(type: Copy) {
+tasks.register('installLocalGitHook', Copy) {
     from new File(rootProject.rootDir, 'config/git/pre-commit')
-    into { new File(rootProject.rootDir, '.git/hooks')}
+    into { new File(rootProject.rootDir, '.git/hooks') }
     fileMode 0775
 }
 
 compileJava.dependsOn installLocalGitHook
+generateGitProperties.dependsOn installLocalGitHook
 
-task runGitPreCommitTasks {
+tasks.register('runGitPreCommitTasks') {
     dependsOn 'test'
     dependsOn 'pmdMain'
     dependsOn 'pmdTest'
