--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     id 'application'
     id 'pmd'
-    id 'org.sonarqube' version '4.0.0.2929'
+    id 'org.sonarqube' version '4.3.0.3225'
     id 'jacoco'
-    id 'org.springframework.boot' version '2.7.12'
+    id 'org.springframework.boot' version '2.7.14'
     id 'uk.gov.hmcts.java' version '0.12.43'
     id 'com.gorylenko.gradle-git-properties' version '2.4.1'
     id 'com.github.ben-manes.versions' version '0.46.0'
     id "info.solidsoft.pitest" version '1.9.11'
-    id 'org.owasp.dependencycheck' version '8.2.1'
+    id 'org.owasp.dependencycheck' version '8.3.1'
     id 'au.com.dius.pact' version '4.3.15'
-    id 'com.github.hmcts.rse-cft-lib' version '0.19.674'
+    id 'com.github.hmcts.rse-cft-lib' version '0.19.771'
 }
 
 apply plugin: 'org.springframework.boot'
@@ -28,8 +28,11 @@ gitProperties {
 group = 'uk.gov.hmcts.reform'
 version = '1.0.0'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 compileJava {
     options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked"
@@ -260,7 +263,7 @@ dependencyManagement {
         }
 
         // CVE-2022-41881, CVE-2022-41915
-        dependencySet(group: 'io.netty', version: '4.1.92.Final') {
+        dependencySet(group: 'io.netty', version: '4.1.95.Final') {
             entry 'netty-buffer'
             entry 'netty-common'
             entry 'netty-codec'
@@ -283,12 +286,13 @@ dependencyManagement {
         }
 
         imports {
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.8"
         }
     }
 }
 
 dependencies {
+    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
@@ -296,16 +300,19 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-activemq'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
-    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.8.3'
-    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.8.3'
-    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.8.3'
-    implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.8.3'
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.8.5'
+    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.8.5'
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.8.5'
+    implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.8.5'
 
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.4'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
 
-    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation group: 'com.google.guava', name: 'guava', version: '32.1.1-jre'
     implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.10'
 
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.2'
@@ -316,7 +323,7 @@ dependencies {
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 
-    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '12.3'
+    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '12.4'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.11.0'
 
     implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.5'
@@ -328,43 +335,43 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.26.0'
-    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.4'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.26.9'
+    implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.10'
 
-    implementation group: 'com.azure', name: 'azure-core', version: '1.39.0'
-    implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.13.4'
+    implementation group: 'com.azure', name: 'azure-core', version: '1.42.0'
+    implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.14.2'
 
-    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.6'
+    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.8'
 
     implementation group:'org.overviewproject', name: 'mime-types', version: '1.0.4'
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.3'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.3'
 
     implementation group:'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
-    implementation group: 'org.apache.qpid', name: 'qpid-jms-client', version: '1.8.0'
+    implementation group: 'org.apache.qpid', name: 'qpid-jms-client', version: '1.10.0'
 
-    implementation group: 'org.pitest', name: 'pitest', version:  '1.13.1'
+    implementation group: 'org.pitest', name: 'pitest', version:  '1.14.2'
     implementation group:'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.9.11'
     implementation group:'org.codehaus.sonar-plugins', name:'sonar-pitest-plugin', version: '0.5'
 
-    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.0'
-    testImplementation group: 'io.rest-assured', name: 'xml-path', version: '5.3.0'
-    testImplementation group: 'io.rest-assured', name: 'json-path', version: '5.3.0'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.1'
+    testImplementation group: 'io.rest-assured', name: 'xml-path', version: '5.3.1'
+    testImplementation group: 'io.rest-assured', name: 'json-path', version: '5.3.1'
     testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0', classifier: 'all', {
         exclude group: 'commons-io', module: 'commons-io'
     }
 
-    implementation group: 'commons-io', name: 'commons-io', version:  '2.11.0'
+    implementation group: 'commons-io', name: 'commons-io', version:  '2.13.0'
 
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
-    implementation group: 'org.apache.pdfbox', name: 'xmpbox', version: '2.0.28'
-    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.28'
-    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.7.0'
-    implementation group: 'org.apache.tika', name: 'tika-parsers', version: '2.7.0'
+    implementation group: 'org.apache.pdfbox', name: 'xmpbox', version: '2.0.29'
+    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.29'
+    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.8.0'
+    implementation group: 'org.apache.tika', name: 'tika-parsers', version: '2.8.0'
 
     implementation group: 'org.json', name: 'json', version: '20230227'
 
@@ -372,12 +379,12 @@ dependencies {
 
     implementation group: "com.networknt", name: "json-schema-validator", version: "1.0.81"
 
-    integrationTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.11.0'
+    integrationTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.13.0'
 
-    functionalTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.11.0'
+    functionalTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.13.0'
 
-    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
         exclude group: 'com.vaadin.external.google', module: 'android-json'
@@ -385,8 +392,8 @@ dependencies {
 
     testImplementation group: 'org.apache.httpcomponents', name: 'fluent-hc', version:  '4.5.14'
 
-    testImplementation group: 'com.azure', name: 'azure-core', version: '1.39.0'
-    testImplementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.13.4'
+    testImplementation group: 'com.azure', name: 'azure-core', version: '1.42.0'
+    testImplementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.14.2'
 
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
     testImplementation group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.37.0'
@@ -396,20 +403,21 @@ dependencies {
     testImplementation group: 'io.github.artsok', name: 'rerunner-jupiter', version: '2.1.6'
 
     // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-dep
-    testImplementation group: 'net.bytebuddy', name: 'byte-buddy-dep', version: '1.14.4'
+    testImplementation group: 'net.bytebuddy', name: 'byte-buddy-dep', version: '1.14.5'
 
 
     testImplementation group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
 
-    testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
-    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
-    functionalTestImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
-    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
-    integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+    testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+    functionalTestImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+    functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+    integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
 
     testImplementation platform(group: 'org.junit', name: 'junit-bom', version: '5.9.3')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
     testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine'
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
 
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
     // https://mvnrepository.com/artifact/org.awaitility/awaitility
@@ -418,13 +426,13 @@ dependencies {
     //pact contract testing
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.3.15'
 
-    contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.12'
+    contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.14'
 
     contractTestImplementation sourceSets.main.runtimeClasspath
     contractTestImplementation sourceSets.test.runtimeClasspath
 
     cftlibImplementation group: 'org.springframework.boot', name: 'spring-boot-devtools'
-    cftlibAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
+    cftlibAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
 
 }
 // this is required to force Java running on the Azure Windows Server OS into using
@@ -550,7 +558,7 @@ bootWithCCD {
     //URLs for services running in Docker require host.docker.internal to resolve properly
     environment 'XUI_DOCUMENTS_API', 'http://host.docker.internal:5005'
     environment 'XUI_DOCUMENTS_API_V2', 'http://host.docker.internal:4455'
-    environment 'IDAM_SIMULATOR_BASE_URL', 'http://rse-idam-simulator:5000'
+    environment 'IDAM_SIMULATOR_BASE_URL', 'http://rse-idam-simulator:5062'
     //URLs for other services can resolve localhost
     environment 'DM_STORE_BASE_URL', 'http://localhost:5005'
     environment 'S2S_URL', 'http://localhost:4502'
