--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -651,7 +651,7 @@ sscs-tribunals-frontend:
       PCQ_ENABLED: true
       MULTIPLE_DRAFTS_ENABLED: true
       TRIBUNALS_CASE_API_URL: http://${SERVICE_NAME}-java
-      UPLOAD_EVIDENCE_URL: http://${SERVICE_NAME}/evidence/upload
+      UPLOAD_EVIDENCE_URL: http://${SERVICE_NAME}-java/evidence/upload
       SERVICES_IDAM_LOGIN_URL: https://idam-web-public.aat.platform.hmcts.net/login
       SERVICES_IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       UV_THREADPOOL_SIZE: 64
