--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -885,7 +885,7 @@ wa-message-cron-service:
     environment:
       WA_CASE_EVENT_HANDLER_SERVICE_URL: http://{{ .Release.Name }}-wa-case-event-handler
 
-wa-task-batch-service-initiation:
+wa-task-batch-service:
   job:
     kind: CronJob
     releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service-initiation
