SSCS-11915 fix job configuration

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -888,7 +888,7 @@ wa-message-cron-service:
 wa-task-batch-service:
   job:
     kind: CronJob
-    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service-initiation
+    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service
     schedule: "*/5 * * * *"
     aadIdentityName: wa
     keyVaults:
@@ -902,10 +902,10 @@ wa-task-batch-service:
       JOB_NAME: "INITIATION"
       ALLOW_CONFIG_MUTATIONS: true
 
-wa-task-batch-service-termination:
+wa-task-batch-termination:
   job:
     kind: CronJob
-    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service-termination
+    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
     schedule: "*/5 * * * *"
     aadIdentityName: wa
     keyVaults:
