--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -905,6 +905,7 @@ wa-task-batch-service:
 wa-task-batch-termination:
   job:
     kind: CronJob
+    image: hmctspublic.azurecr.io/wa/task-batch-service:latest
     releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
     schedule: "*/5 * * * *"
     aadIdentityName: wa
