--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -89,6 +89,7 @@ dependencies:
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: wa.enabled
   - name: wa-task-batch-termination
+    version: ~0.0.15
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     chart: wa-task-batch-service
     condition: wa.enabled
