cron jobs as list under one service added

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -886,38 +886,39 @@ wa-message-cron-service:
       WA_CASE_EVENT_HANDLER_SERVICE_URL: http://{{ .Release.Name }}-wa-case-event-handler
 
 wa-task-batch-service:
-  job:
-    kind: CronJob
-    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service
-    schedule: "*/5 * * * *"
-    aadIdentityName: wa
-    keyVaults:
-      wa:
-        secrets:
-          - s2s-secret-task-monitor
-    environment:
-      S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
-      S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
-      WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
-      JOB_NAME: "INITIATION"
-      ALLOW_CONFIG_MUTATIONS: true
-
-wa-task-batch-termination:
-  job:
-    kind: CronJob
-    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
-    schedule: "*/5 * * * *"
-    aadIdentityName: wa
-    keyVaults:
-      wa:
-        secrets:
-          - s2s-secret-task-monitor
-    environment:
-      S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
-      S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
-      WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
-      JOB_NAME: "TERMINATION"
-      ALLOW_CONFIG_MUTATIONS: true
+  jobs:
+    wa-task-batch-service:
+      kind: CronJob
+      releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service
+      name: ${SERVICE_NAME}-wa-task-batch-service
+      schedule: "*/5 * * * *"
+      aadIdentityName: wa
+      keyVaults:
+        wa:
+          secrets:
+            - s2s-secret-task-monitor
+      environment:
+        S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
+        S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
+        WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
+        JOB_NAME: "INITIATION"
+        ALLOW_CONFIG_MUTATIONS: true
+    wa-task-batch-termination:
+      kind: CronJob
+      releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
+      name: ${SERVICE_NAME}-wa-task-batch-termination
+      schedule: "*/5 * * * *"
+      aadIdentityName: wa
+      keyVaults:
+        wa:
+          secrets:
+            - s2s-secret-task-monitor
+      environment:
+        S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
+        S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
+        WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
+        JOB_NAME: "TERMINATION"
+        ALLOW_CONFIG_MUTATIONS: true
 
 ccd-message-publisher:
   java:
