--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -853,7 +853,7 @@ wa-case-event-handler:
       AZURE_SERVICE_BUS_CONNECTION_STRING: ${SERVICE_BUS_CONNECTION_STRING}
       AZURE_SERVICE_BUS_TOPIC_NAME: ccd-case-events
       AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ccd-case-events
-      AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: ccd-case-events
+      AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: sscs-tribunals-api-pr-3156
       POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
       POSTGRES_NAME: wa-case-event-handler
       POSTGRES_USERNAME: hmcts
@@ -886,39 +886,21 @@ wa-message-cron-service:
       WA_CASE_EVENT_HANDLER_SERVICE_URL: http://{{ .Release.Name }}-wa-case-event-handler
 
 wa-task-batch-service:
-  cronjobs:
-    - "wa-task-batch-service-1":
-        kind: CronJob
-        releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service-1
-        name: ${SERVICE_NAME}-wa-task-batch-service1-1
-        schedule: "*/5 * * * *"
-        aadIdentityName: wa
-        keyVaults:
-          wa:
-            secrets:
-              - s2s-secret-task-monitor
-        environment:
-          S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
-          S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
-          WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
-          JOB_NAME: "INITIATION"
-          ALLOW_CONFIG_MUTATIONS: true
-    - "wa-task-batch-termination":
-        kind: CronJob
-        releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
-        name: ${SERVICE_NAME}-wa-task-batch-termination
-        schedule: "*/5 * * * *"
-        aadIdentityName: wa
-        keyVaults:
-          wa:
-            secrets:
-              - s2s-secret-task-monitor
-        environment:
-          S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
-          S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
-          WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
-          JOB_NAME: "TERMINATION"
-          ALLOW_CONFIG_MUTATIONS: true
+  job:
+    kind: CronJob
+    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service
+    schedule: "*/5 * * * *"
+    aadIdentityName: wa
+    keyVaults:
+      wa:
+        secrets:
+          - s2s-secret-task-monitor
+    environment:
+      S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
+      S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
+      WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
+      JOB_NAME: "INITIATION"
+      ALLOW_CONFIG_MUTATIONS: true
 
 ccd-message-publisher:
   java:
