--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -902,16 +902,28 @@ wa-task-batch-service:
       WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
       JOB_NAME: "INITIATION"
       ALLOW_CONFIG_MUTATIONS: true
-  job2:
+
+wa-task-batch-termination:
+  job:
     kind: CronJob
-    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
-    name: ${SERVICE_NAME}-wa-task-batch-termination
-    schedule: "*/5 * * * *"
-    aadIdentityName: wa
-    keyVaults:
-      wa:
-        secrets:
-          - s2s-secret-task-monitor
+    useInterpodAntiAffinity: true
+    image: hmctspublic.azurecr.io/wa/task-batch-service:prod-60334c7-20230810124701 #{"$imagepolicy": "flux-system:wa-task-batch-termination"}
+    chart:
+      spec:
+        chart: ./stable/wa-task-batch-service
+        sourceRef:
+          kind: GitRepository
+          name: hmcts-charts
+          namespace: flux-system
+        interval: 1m
+      releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-termination
+      name: ${SERVICE_NAME}-wa-task-batch-termination
+      schedule: "*/5 * * * *"
+      aadIdentityName: wa
+      keyVaults:
+        wa:
+          secrets:
+            - s2s-secret-task-monitor
     environment:
       S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
       S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
