--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -88,10 +88,10 @@ dependencies:
     version: ~0.0.15
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: wa.enabled
-  - name: wa-task-batch-termination
-    version: ~0.0.1
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-    condition: wa-task-batch-termination.enabled
+#  - name: wa-task-batch-termination
+#    version: ~0.0.1
+#    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+#    condition: wa-task-batch-termination.enabled
   - name: wa-message-cron-service
     version: ~0.0.3
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
