--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -774,10 +774,6 @@ servicebus:
     queues:
       - name: sscs-orchestrator-queue-preview
 
-#Work Allocation services
-wa:
-  enabled: true
-
 camunda-bpm:
   enabled: true
   java:
@@ -885,10 +881,21 @@ wa-message-cron-service:
     environment:
       WA_CASE_EVENT_HANDLER_SERVICE_URL: http://{{ .Release.Name }}-wa-case-event-handler
 
-wa-task-batch-service:
+
+wa:
+  enabled: true
+  taskBatchCron:
+    enabled: true
+  reconfigurationBatchCron:
+    enabled: true
+  terminationBatchCron:
+    enabled: true
+
+wa-initiation-batch:
   job:
     kind: CronJob
-    releaseNameOverride: ${SERVICE_NAME}-wa-task-batch-service
+    releaseNameOverride: ${SERVICE_NAME}-wa-initiation-batch
+    name: ${SERVICE_NAME}-wa-initiation-batch
     schedule: "*/5 * * * *"
     aadIdentityName: wa
     keyVaults:
@@ -901,6 +908,43 @@ wa-task-batch-service:
       WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
       JOB_NAME: "INITIATION"
       ALLOW_CONFIG_MUTATIONS: true
+
+wa-termination-batch:
+  job:
+    kind: CronJob
+    releaseNameOverride: ${SERVICE_NAME}-wa-termination-batch
+    name: ${SERVICE_NAME}-wa-termination-batch
+    schedule: "*/5 * * * *"
+    aadIdentityName: wa
+    keyVaults:
+      wa:
+        secrets:
+          - s2s-secret-task-monitor
+    environment:
+      S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
+      S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
+      WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
+      JOB_NAME: "TERMINATION"
+      ALLOW_CONFIG_MUTATIONS: true
+
+wa-reconfiguration-batch:
+  job:
+    kind: CronJob
+    releaseNameOverride: ${SERVICE_NAME}-wa-job-reconfiguration
+    name: ${SERVICE_NAME}-wa-job-reconfiguration
+    schedule: "*/5 * * * *"
+    aadIdentityName: wa
+    keyVaults:
+      wa:
+        secrets:
+          - s2s-secret-task-monitor
+    environment:
+      S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
+      S2S_MICROSERVICE_NAME_TASK_MONITOR: "wa_task_monitor"
+      WA_TASK_MONITOR_SERVICE_URL: http://{{ .Release.Name }}-wa-task-monitor
+      JOB_NAME: "RECONFIGURATION"
+      ALLOW_CONFIG_MUTATIONS: true
+
 
 ccd-message-publisher:
   java:
